refactor(global): fix eslint issues and add assets types for typescript imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
 	"include": [
 		"**/*.ts",
 		"**/*.tsx",
+		"assets/images/*.png",
+		"images.d.ts",
 		".expo/types/**/*.ts",
 		"expo-env.d.ts",
 		"nativewind-env.d.ts"
