--- a/app.json
+++ b/app.json
@@ -29,7 +29,12 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      [
+        "expo-router",
+        {
+          "root": "./app"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
