--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "eslint .",
-    "lintFixAll": "eslint . --fix",
+    "lint:fix": "eslint . --fix",
     "prettierFixAll": "prettier --write './**/*.{js,jsx,ts,tsx}'",
     "fix:lintPrettier": "npm run prettierFixAll && npm run lintFixAll",
     "prepare": "husky",
@@ -53,9 +53,11 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-checkbox-reanimated": "^0.1.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "~0.20.0",
     "tailwindcss": "^3.4.17"
   },
@@ -65,6 +67,8 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.26.0",
     "@types/react": "~19.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.26.0",
@@ -81,6 +85,5 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1"
   },
-  "private": true,
-  "type": "module"
+  "private": true
 }
