--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
+    "@react-native-community/cli": "latest",
     "@babel/core": "^7.25.2",
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
@@ -82,6 +83,7 @@
     "jest-expo": "~53.0.5",
     "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.32.1"
