--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-community/datetimepicker": "^8.3.0",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
+    "@react-navigation/stack": "^7.3.2",
     "expo": "~53.0.9",
     "expo-font": "~13.3.1",
     "expo-image-picker": "^16.1.4",
@@ -56,13 +58,16 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-checkbox-reanimated": "^0.1.2",
+    "react-native-maps": "1.20.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "expo-location": "~18.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
