--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
+    "axios": "^1.11.0",
     "expo": "~53.0.9",
     "expo-font": "~13.3.1",
     "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.5",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -66,8 +68,7 @@
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
-    "tailwindcss": "^3.4.17",
-    "expo-location": "~18.1.5"
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
