--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.3.2",
+    "axios": "^1.11.0",
     "expo": "~53.0.9",
     "expo-font": "~13.3.1",
     "expo-image-picker": "^16.1.4",
