--- a/package.json
+++ b/package.json
@@ -11,14 +11,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettierFixAll": "prettier --write './**/*.{js,jsx,ts,tsx}'",
-    "fix:lintPrettier": "npm run prettierFixAll && npm run lintFixAll",
-    "prepare": "husky",
-    "commit": "cz"
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+    "fix:lintPrettier": "npm run prettierFixAll && npm run lintFixAll"
   },
   "lint-staged": {
     "*.ts": [
@@ -73,21 +66,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.26.0",
     "@react-native-community/cli": "latest",
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
-    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9.26.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-native": "^5.0.0",
     "globals": "^16.1.0",
-    "husky": "^9.1.7",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
     "lint-staged": "^16.0.0",
