--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.20.0",
     "tailwindcss": "^3.4.17",
-    "expo-device": "~7.1.4"
+    "expo-device": "~7.1.4",
+    "expo-image-manipulator": "~13.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
